--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -44,7 +44,7 @@ h6 {
 
     @media (min-width: 1024px) {
         flex-direction: row;
-        min-height: 100%;
+        height: 100vh;
     }
 }
 
@@ -57,7 +57,7 @@ h6 {
 
     @media (min-width: 1024px) {
         padding: 60px 40px;
-        min-height: 100%;
+        height: 100%;
     }
 }
 
